# imagegencam

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  SECURITY.md
.githooks/: pre-commit
3d model/: README.md
3d model/step/: Buttons - Arrows.step  Buttons - Circle Square.step  Buttons - Top.step  Clip On Lens.step  Folding Case.step
3d model/stl/: Buttons - Arrows.stl  Buttons - Circle Square.stl  Buttons - Top.stl  Clip On Lens.stl
docs/: kit-image-contract.md
docs/codex-guide/: README.md  hardware-checks.md  kit-flow.md  remote-codex.md  setup-flow.md  sudo-and-terminal.md  troubleshooting.md
scripts/: check_secrets.sh  install_git_hooks.sh  setup_mac_ssh_to_pi.sh
software/: .env.example  ARCHITECTURE.md  pyproject.toml  requirements.txt
software/data/: prompts.json  settings.json
software/deploy/: imagegencam-boot-splash.service  imagegencam-gui-fallback.service  imagegencam-nmcli.sudoers  imagegencam.service
software/scripts/: install_service.sh  network_fallback_gui.sh  pisugar_trigger_shutter.sh  run.sh  setup.sh  setup_app.sh  setup_venv.sh  show_boot_splash.py
software/src/imagegencam/: __init__.py  app.py  config.py  controller.py  job_store.py  openai_client.py  web.py  wifi_manager.py
software/tests/: test_config.py  test_openai_client.py  test_web.py  test_wifi_manager.py
