[project]
name = "imagegencam"
version = "0.1.0"
description = "ImageGenCam for Raspberry Pi Zero 2 W, Picamera2, Display HAT Mini, and OpenAI image edits."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.109.0",
  "qrcode>=8.2",
  "Pillow>=10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
